[package]
name = "tx2-core"
version = "0.1.0"
edition = "2021"
authors = ["TX-2 Contributors"]
license = "MIT"
description = "High-performance native ECS engine for cross-platform applications and games"
repository = "https://github.com/IreGaddr/tx2-core"
homepage = "https://github.com/IreGaddr/tx2-core"
documentation = "https://docs.rs/tx2-core"
keywords = ["ecs", "game-engine", "wgpu", "entity-component"]
categories = ["game-development", "graphics", "simulation"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
winit = "0.29"
wgpu = "0.19"
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
tx2-link = { version = "0.1.0", path = "../tx2-link" }

[dev-dependencies]
# None yet
