[package]
name = "tx2-core"
version = "0.1.2"
edition = "2021"
authors = ["TX-2 Contributors"]
license = "MIT"
description = "High-performance native ECS engine for cross-platform applications and games"
repository = "https://github.com/IreGaddr/tx2-core"
homepage = "https://github.com/IreGaddr/tx2-core"
documentation = "https://docs.rs/tx2-core"
keywords = ["ecs", "game-engine", "wgpu", "entity-component"]
categories = ["game-development", "graphics", "simulation"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
winit = { version = "0.29", optional = true }
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
env_logger = { version = "0.11", optional = true }
log = "0.4"
tx2-link = "0.1"

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Performance",
    "PerformanceEntry",
    "PerformanceMark",
    "PerformanceMeasure",
] }
getrandom = { version = "0.2", features = ["js"] }
tsify = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["native"]
native = ["winit", "wgpu", "pollster", "env_logger"]
wasm = ["console_error_panic_hook"]
